--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <button class="bg-primary btn mt-3 text-white py-2 px-4 rounded">Purchase</button>
                 </div>
                 <div class="col-md-6 col-sm-12">
-                    <img src="images/header-bike.png" alt="">
+                    <img class="img-fluid" src="images/header-bike.png" alt="">
                 </div>
             </div>
         </div>
@@ -167,11 +167,93 @@
           </div>
         </div>
       </div>
-    
+    </div>
+  </div>
+</section>
+
+<!-- faq section html  -->
+<section class="faq my-5 py-5">
+  <div class="container">
+    <h2 class="text-black fs-1 fw-bold text-center mb-5">Frequently Asked <span class="text-primary">Questions</span> </h2>
+    <div class="row">
+      <div class="col-md-6 col-sm-12">
+        <img class="img-fluid" src="images/faq.png" alt="">
+      </div>
+      <div class="col-md-6 col-sm-12">
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" >
+              <strong>What are the most important things I should
+              know about riding a bike?</strong>
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. 
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <strong>How can I tell if my helmet is old and I need a 
+                  new one?</strong>
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                This is the second item's accordion body.It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <strong>What rules should I follow when riding my bike?</strong>
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                This is the third item's accordion body.It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the, though the transition does limit overflow.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
     </main>
+<!-- footer section  -->
+    <footer class="bg-black py-5 bg-black">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-sm-12">
+      <ul class="d-flex list-unstyled">
+        <li class="me-5 text-white">Download Now</li>
+        <li class="me-5 text-white">License</li>
+      </ul>
+      <ul class="d-flex list-unstyled flex-wrap">
+        <li class="me-5 text-white">About</li>
+        <li class="me-5 text-white">Features</li>
+        <li class="me-5 text-white">Pricing</li>
+        <li class="me-5 text-white">Careers</li>
+        <li class="me-5 text-white">Help</li>
+        <li class="text-white">Privacy Policy</li>
+      </ul>
+<p class="text-white mt-4"> &copy; 2020 bike. All rights reserved</p>
+    </div>
+    <div class="col-md-6 col-sm-12">
+<ul class="d-flex flex-column text-end justify-content-end list-unstyled">
+  <li class="text-white">Get the App</li>
+  <li class="my-3"><img style="width: 100px;" src="images/ios.png" alt=""></li>
+  <li> <img style="width: 100px;" src="images/android.png" alt=""> </li>
+</ul>
+    </div>
+  </div>
+</div>
+    </footer>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
